<resources>
    <string name="facebook_app_id">2736645039945929</string>
    <string name="fb_login_protocol_scheme">fb2736645039945929</string>
    <string name="app_name">ONE</string>
    <string name="login">Log In</string>
    <string name="donot_have_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="forget_password">Forget Password?</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="have_account">Have an account?</string>
    <string name="create">Create</string>
    <string name="mobile">Mobile</string>
    <string name="repassword">Re Password</string>
    <string name="current_location">Current Location</string>
    <string name="signIn_or_register">Sign In Or Register</string>
    <string name="cards">Cards</string>
    <string name="distributors">Distributors</string>
    <string name="about">About</string>
    <string name="contactUs">Contact Us</string>
    <string name="dashbord">Dashbord</string>
    <string name="logout">Logout</string>
    <string name="no_internt_connection">No Internet Connection</string>
    <string name="email">Email</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="password_doesnot_match">Password doesn\'t match</string>
    <string name="successfully_registered">Successfully Registered</string>
    <string name="featured_offers">Featured offers</string>
    <string name="discount">Discount</string>
    <string name="featured_sellers">Featured sellers</string>
    <string name="companies">Companies</string>
    <string name="exit_app_message">press BACK again to exit</string>
    <string name="must_login_message">You must login first</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="password_changed">Password Changed !!</string>
    <string name="forget_password2">Forget Password</string>
    <string name="send">Send</string>
    <string name="discount_amount">Discount Amount</string>
    <string name="discount_percentage">Discount Percentage</string>
    <string name="date">Date</string>
    <string name="total">Total</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_match">Password doesn\'t match</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="edit">Edit</string>
    <string name="country">Country</string>
    <string name="forget_password_message">We sent you an email, check it</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_updated">Profile Updated Successfully</string>
    <string name="Orders">Orders</string>
    <string name="my_cards">My Cards</string>
    <string name="done">Done</string>
    <string name="none">None</string>
    <string name="please_wait">Please Wait</string>
    <string name="select_city">Select City</string>
    <string name="select_country">Select Country</string>
    <string name="app_language">App Language</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="arabic">Arabic</string>
    <string name="malaysian">Malaysian</string>


    <string name="report_page">Report page</string>
    <string name="wrong_barcode">Wrong Barcode</string>
    <string name="member_name">Member Name</string>
    <string name="bill_value">Bill Value</string>
    <string name="sale_value">Sale Value</string>
    <string name="currency">Currency</string>
    <string name="choose_offer">Choose Offer</string>
    <string name="add">Add</string>
    <string name="add_bill">Add Bill</string>
    <string name="bill_added_successfully">Bill Added Successfully</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="bill_value_message">Sale value must be less than bill value</string>
    <string name="active_cards">Active Cards</string>
    <string name="serial_number">Serial Number</string>
    <string name="active">Active</string>
    <string name="card_activated">Card Activated Successfully</string>
    <string name="offer_details">Offer Details</string>
    <string name="review_submitted">Your review submitted successfully</string>
    <string name="submit_review">Submit Review</string>
    <string name="your_review">Your Review</string>
    <string name="rate_dialog_title">Your rating for this offer</string>
    <string name="already_rated">This order has already been rated</string>
    <string name="agree_to_one">I agree to the ONE</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_offer">Share Offer</string>
    <string name="language">Language</string>
    <string name="branches">Branches</string>
    <string name="connect_with_google">Connect With Google</string>
</resources>
