<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:src="@drawable/logo_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/guide_line"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2"/>

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guide_line">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/online_mark"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_online"/>

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textSize="@dimen/font_size_large"
                    android:text="Abdulrahman" />

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/signIn_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/signIn_or_register"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/orders_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/Orders"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/distributors_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/distributors"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/about_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/about"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/contactUs_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/contactUs"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/change_language_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/language"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dashBord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@color/grayColor"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/dashbord"
                        android:textColor="@color/secondFontColor"
                        android:textSize="@dimen/font_size_large"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/edit_profile_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/edit_profile"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/reset_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/reset_password"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@color/grayColor"
                app:cardCornerRadius="20dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/cards"
                        android:textColor="@color/secondFontColor"
                        android:textSize="@dimen/font_size_large"
                        android:textStyle="bold" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cards_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/active_cards"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/my_cards_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_small"
                        android:gravity="center"
                        android:text="@string/my_cards"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/font_size_large" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/logout_button"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:outlineSpotShadowColor="@color/gradient2"
            app:cardCornerRadius="@dimen/radius"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/horizontal_gradient"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/font_size_xlarge"
                    android:textStyle="bold" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
