<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="center">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/radius">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/active_card_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:elevation="12dp"/>

            <EditText
                android:id="@+id/serial_number_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginLeft="@dimen/margin_large"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginRight="@dimen/margin_large"
                android:background="@drawable/filter_spinner_background"
                android:hint="@string/serial_number"
                android:textSize="@dimen/_13sdp"
                android:padding="@dimen/_8sdp" />


            <EditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@id/serial_number_input"
                android:layout_alignStart="@id/serial_number_input"
                android:layout_alignEnd="@id/serial_number_input"
                android:layout_marginTop="@dimen/margin_medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/_13sdp"
                android:background="@drawable/filter_spinner_background"
                android:padding="@dimen/_8sdp"/>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/active_button"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_20sdp"
                app:cardCornerRadius="@dimen/radius">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/horizontal_gradient"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/active"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_20ssp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>

